# dayz-trader

./: .gitignore  Dockerfile  Dockerfile.airflow  README_RU.md  cli.py  config.toml  docker-compose.yml  ml_arbitrage_detector.py  ml_attachment_analytics.py  ml_price_analysis.py  ml_sheet_reports.py  ml_stock_analytics.py  ml_trader_clustering.py  pyproject.toml  requirements-airflow.txt  requirements.txt  trader_concept.py
dags/: dag_economy_analytics.py  dag_full_sync.py  dag_generate_configs.py  trader_data.py
models/: _utils.py  input.py  output.py
output/profiles/TraderX/TraderXConfig/: TraderXCurrencySettings.json  TraderXGeneralSettings.json
output/profiles/TraderX/TraderXConfig/Categories/: cat_bronezhilety_barmen_001.json  cat_bronezhilety_chernyj_rynok_001.json  cat_bronezhilety_diakon_001.json  cat_bronezhilety_kapitan_maruga_001.json  cat_bronezhilety_sidor_001.json  cat_chasti_mutantov_azot_001.json  cat_chasti_mutantov_barmen_001.json  cat_chasti_mutantov_chernyj_rynok_001.json  cat_chasti_mutantov_diakon_001.json  cat_chasti_mutantov_dolg_001.json  cat_chasti_mutantov_nauka_001.json  cat_chasti_mutantov_saharov_001.json  cat_chasti_mutantov_sidor_001.json  cat_eda_baba_njura_001.json  cat_eda_barmen_001.json  cat_eda_chernyj_rynok_001.json  cat_eda_diakon_001.json  cat_eda_kapitan_maruga_001.json  cat_eda_rybak_001.json  cat_ekipirovka_baba_njura_001.json  cat_ekipirovka_bandity_001.json  cat_ekipirovka_barmen_001.json  (+281 more)
tests/: conftest.py  test__utils.py  test_input_models.py  test_integration.py  test_output_models.py  test_trader_concept.py
(+14734 files in other folders)
